# cvt2utf

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  cvt2utf.py  cvt2utf8.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cvt2utf.py
.github/workflows/: pytest.yml
cvt2utf/: __init__.py  cvt2utf.py  main.py
sample_data/: gb2312.crlf.txt  gbk.crlf.txt  latin1.crlf.txt  utf-16be.txt  utf-16le.txt  utf-8-bom.txt  utf-8.crlf.txt
